# hookcli-mcp

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  RELEASE_v0.1.0.md  SECURITY.md  docker-compose.yml  pyproject.toml  scaffold.ps1
.github/workflows/: ci.yml
config/: otel-config.yaml  prometheus.yml  seccomp.json
hook_templates/: README.md  github_build_retry.yaml  stripe_payment_recovery.yaml
hook_templates/agent_runtime/: README.md  command_validate.yaml  gateway_startup_health.yaml  session_compact_summary.yaml
hook_templates/business/: api_rate_limit_auto_recovery.yaml  compliance_auto_remediation.yaml  cross_system_onboarding.yaml  customer_support_triage.yaml  database_backup_verification.yaml  dns_failover_automation.yaml  dynamic_cloud_scaling.yaml  employee_offboarding.yaml  fraud_detection_payment_hold.yaml  inventory_rebalancing.yaml  invoice_approval_escalation.yaml  multi_cloud_cost_anomaly.yaml  security_alert_dedup.yaml  software_license_compliance.yaml  ssl_cert_auto_renewal.yaml  subscription_churn_prevention.yaml
hookcli_mcp/: __init__.py  server.py  server_stdio.py
hookcli_mcp/api/: approvals.py  health.py  metrics.py  stripe_webhooks.py  tasks.py
hookcli_mcp/auth/: __init__.py  rbac.py
hookcli_mcp/core/: approvals.py  validator.py
hookcli_mcp/db/: models.py
hookcli_mcp/observability/: __init__.py  metrics.py  otel.py
hookcli_mcp/sandbox/: __init__.py  executor.py  validate.py
hookcli_mcp/services/: approval.py  queue.py  rag.py
hookcli_mcp/telemetry/: metrics.py
hookcli_mcp/tools/: bottleneck_analyze.py  validate.py
tests/: conftest.py  test_mcp_transport.py  test_sse_stream.py  test_validator.py
tests/approval/: __init__.py  test_slack_flow.py
tests/bottleneck/: __init__.py  test_rag_pipeline.py
tests/rbac/: __init__.py  test_roles.py
tests/security/: test_sandbox.py
typescript/: README.md  package.json
typescript/src/: server.ts
