[project]
name = "hookcli-mcp"
version = "0.1.0"
description = "Advanced Event-Hook Automation Server for AI-Driven Business Process Remediation"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "you@example.com"}
]

dependencies = [
    "fastapi>=0.111.0,<1.0",
    "uvicorn[standard]>=0.30.0,<1.0",
    "mcp>=1.0.0,<2.0",
    "pydantic>=2.7.0,<3.0",
    "python-multipart>=0.0.9,<1.0",
    "docker>=7.1.0,<8.0",
    "jinja2>=3.1.4,<4.0",
    "jsonschema>=4.22.0,<5.0",
    "aiosqlite>=0.20.0,<1.0",
    "redis>=5.0.0,<6.0",
    "httpx>=0.27.0,<1.0",
    "opentelemetry-api>=1.25.0,<2.0",
    "opentelemetry-sdk>=1.25.0,<2.0",
    "opentelemetry-instrumentation-fastapi>=0.46.0,<1.0",
    "opentelemetry-exporter-otlp>=1.25.0,<2.0",
    "opentelemetry-exporter-prometheus>=0.46b0,<1.0",
    "prometheus-client>=0.20.0,<1.0",
    "sentence-transformers>=2.7.0,<3.0",
    "chromadb>=0.5.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<1.0",
    "pytest-cov>=5.0.0,<6.0",
    "ruff>=0.4.0,<1.0",
    "bandit>=1.7.0,<2.0",
    "safety>=3.0.0,<4.0",
]

[project.scripts]
hookcli-mcp = "hookcli_mcp.server:main"

[tool.mcp]
name = "hookcli-mcp"
version = "0.1.0"
description = "Hook CLI MCP Server"
transport = "stdio"
entrypoint = "hookcli_mcp.server:app"

[tool.ruff]
target-version = "py312"
line-length = 120
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["hookcli_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
